# stretch_gui

./: .gitignore  README.md
stretch_gui_library/: CMakeLists.txt  package.xml  setup.py
stretch_gui_library/include/stretch_gui_library/: CameraNode.hpp  GraspNode.hpp  MapNode.hpp  MoveBaseStatusNode.hpp  ObjectSegmenter.hpp  StretchInterface.hpp  StretchInterfaceGazebo.hpp  StretchMoveItInterface.hpp  graspnode.hpp  mapsubscriber.hpp  movebasestatus.hpp  roscamera.hpp  sceneviewer.hpp  stretch_gui_library_global.h
stretch_gui_library/launch/: test.launch
stretch_gui_library/msg/: MapPose.msg  MoveCommand.msg  PointClicked.msg
stretch_gui_library/nodes/: camera_node.cpp  grasp_node.cpp  map_node.cpp  move_base_node.cpp  stretch_gazebo.cpp  stretch_interface_node.cpp
stretch_gui_library/src/: CameraNode.cpp  GraspNode.cpp  MapNode.cpp  MoveBaseStatusNode.cpp  ObjectSegmenter.cpp  StretchInterface.cpp  StretchInterfaceGazebo.cpp  StretchMoveItInterface.cpp  graspnode.cpp  mapsubscriber.cpp  movebasestatus.cpp  roscamera.cpp
stretch_gui_library/src/stretch_gui/: stretch_interface
stretch_gui_library/srv/: DoubleBool.srv  SetMapping.srv  SetObjectOrientation.srv
stretch_gui_server/: CMakeLists.txt  package.xml
stretch_gui_server/config/: params.yaml  params_gazebo.yaml
stretch_gui_server/include/stretch_gui_server/: Server.hpp  Server.rep
stretch_gui_server/launch/: stretch_gazebo.xml  stretch_gui_server.launch  stretch_interface.xml
stretch_gui_server/nodes/: server_node.cpp
stretch_gui_server/src/: Server.cpp
